Replace deprecated methods from before JDK 17.